@@ -11,3 +11,10 @@ The manual is in doc/.  You can also browse the manual and see updates
 about the project on the homepage:
 
 http://www.gnu.org/software/libtasn1/
+
+----------------------------------------------------------------------
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008,
+              2009, 2010 Free Software Foundation, Inc.
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
