@@ -40,3 +40,9 @@ $ make
 $ make check
 
 Happy hacking!
+
+----------------------------------------------------------------------
+Copyright (C) 2009, 2010 Free Software Foundation, Inc.
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
