@@ -17,3 +17,10 @@ David Reiser            <dbreiser@gmail.com>
 Didier Godefroy         <dg@ulysium.net>
 Andreas Metzler         <ametzler@downhill.at.eu.org>
 Ludovic Courtès         <ludo@gnu.org>
+
+----------------------------------------------------------------------
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008,
+              2009, 2010 Free Software Foundation, Inc.
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
